@@ -1,12 +1,16 @@
 package org.kergru.library.books.service;
 
-import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import org.kergru.library.books.repository.BookRepository;
-import org.kergru.library.books.repository.BookWithLoan;
+import org.kergru.library.books.repository.BookWithLoanProjection;
 import org.kergru.library.model.BookDto;
 import org.kergru.library.model.LoanStatusDto;
+import org.kergru.library.model.PageResponseDto;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
 @Service
 public class BookService {
@@ -17,15 +21,29 @@ public class BookService {
     this.bookRepository = bookRepository;
   }
 
-  public List<BookDto> findAll() {
-    return bookRepository.findAllWithLoanStatus().stream().map(BookService::toDto).toList();
+  public PageResponseDto<BookDto> searchBooks(String searchString, int page, int size, String sortBy) {
+
+    var bookPage = bookRepository.searchBooksPaged(
+        (StringUtils.hasText(searchString) ? searchString : null),
+        PageRequest.of(page, size, Sort.by(sortBy)));
+    return new PageResponseDto<>(
+        bookPage.getContent().stream().map(BookService::toDto).collect(Collectors.toList()),
+        bookPage.getNumber(),
+        bookPage.getSize(),
+        bookPage.getTotalPages(),
+        bookPage.getTotalElements(),
+        bookPage.isFirst(),
+        bookPage.isLast(),
+        bookPage.getNumberOfElements(),
+        bookPage.isEmpty()
+    );
   }
 
-  public Optional<BookDto> findByIsbn(String isbn) {
+  public Optional<BookDto> getBook(String isbn) {
     return bookRepository.findByIsbnWithLoan(isbn).map(BookService::toDto);
   }
 
-  public static BookDto toDto(BookWithLoan b) {
+  public static BookDto toDto(BookWithLoanProjection b) {
     return new BookDto(
         b.getIsbn(),
         b.getTitle(),
